WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137970
[GTK] RenderThemeGtk::mediaControlsScript() is not defined when VIDEO is disabled
https://bugs.webkit.org/show_bug.cgi?id=137970
Summary
[GTK] RenderThemeGtk::mediaControlsScript() is not defined when VIDEO is disa...
Milan Crha
Reported
2014-10-22 11:16:26 PDT
When the VIDEO is disabled the RenderThemeGtk::mediaControlsScript() is not defined in the header file, thus also its body should not be compiled.
Attachments
proposed wk patch
(1.35 KB, patch)
2014-10-22 11:18 PDT
,
Milan Crha
cgarcia
: review+
cgarcia
: commit-queue-
Details
Formatted Diff
Diff
proposed wk patch with no line wrap in the ChangeLog
(1.39 KB, patch)
2014-10-22 23:38 PDT
,
Milan Crha
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Milan Crha
Comment 1
2014-10-22 11:18:42 PDT
Created
attachment 240281
[details]
proposed wk patch
Carlos Garcia Campos
Comment 2
2014-10-22 23:05:12 PDT
Comment on
attachment 240281
[details]
proposed wk patch View in context:
https://bugs.webkit.org/attachment.cgi?id=240281&action=review
> Source/WebCore/ChangeLog:5 > + RenderThemeGtk::mediaControlsScript() is not defined when > + VIDEO is disabled. > + <
https://webkit.org/b/137970
>.
Do not split the bug title line, are you using prepareChangelog script to generate the changelog entries?
Milan Crha
Comment 3
2014-10-22 23:35:36 PDT
Yes, I use the script, I only thought the line it too long, at least with compare of the other changelog entries, thus I wrapped it. I will resend the patch with unwrapped line.
Milan Crha
Comment 4
2014-10-22 23:38:37 PDT
Created
attachment 240334
[details]
proposed wk patch with no line wrap in the ChangeLog
WebKit Commit Bot
Comment 5
2014-10-23 00:17:53 PDT
Comment on
attachment 240334
[details]
proposed wk patch with no line wrap in the ChangeLog Clearing flags on attachment: 240334 Committed
r175095
: <
http://trac.webkit.org/changeset/175095
>
WebKit Commit Bot
Comment 6
2014-10-23 00:17:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug