RenderThemeGtk::mediaControlsScript() is not defined when VIDEO is disabled. <https://webkit.org/b/137970>.

Patch by Milan Crha <mcrha@redhat.com> on 2014-10-23
Reviewed by Carlos Garcia Campos.

* rendering/RenderThemeGtk.cpp:

Canonical link: https://commits.webkit.org/155858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175095 268f45cc-cd09-0410-ab3c-d52691b4dbfc